test: update PaginationUtilTest