@@ -36,7 +36,7 @@ class PaginationUtilTest {
     List<String> strHeaders = headers.get(HttpHeaders.LINK);
     assertThat(strHeaders).isNotNull();
     assertThat(strHeaders).hasSize(1);
-    String headerData = strHeaders.getFirst();
+    String headerData = strHeaders.get(0);
     assertThat(headerData.split(",")).hasSize(4);
     String expectedData =
         "</api/_search/example?page=7&size=50>; rel=\"next\"," +
@@ -44,8 +44,8 @@ class PaginationUtilTest {
         "</api/_search/example?page=7&size=50>; rel=\"last\"," +
         "</api/_search/example?page=0&size=50>; rel=\"first\"";
     assertThat(headerData).isEqualTo(expectedData);
-    List<String> xparamTotalCountHeaders = headers.get("X-Total-Count");
-    assertThat(xparamTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(400L);
+    List<String> xTotalCountHeaders = headers.get("X-Total-Count");
+    assertThat(xTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(400L);
   }
 
   @Test
@@ -57,14 +57,14 @@ class PaginationUtilTest {
     List<String> strHeaders = headers.get(HttpHeaders.LINK);
     assertThat(strHeaders).isNotNull();
     assertThat(strHeaders).hasSize(1);
-    String headerData = strHeaders.getFirst();
+    String headerData = strHeaders.get(0);
     assertThat(headerData.split(",")).hasSize(2);
     String expectedData =
         "</api/_search/example?query=Test1%2C%20test2&page=0&size=0>; rel=\"last\"," +
         "</api/_search/example?query=Test1%2C%20test2&page=0&size=0>; rel=\"first\"";
     assertThat(headerData).isEqualTo(expectedData);
-    List<String> xparamTotalCountHeaders = headers.get("X-Total-Count");
-    assertThat(xparamTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(0L);
+    List<String> xTotalCountHeaders = headers.get("X-Total-Count");
+    assertThat(xTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(0L);
   }
 
   @Test
@@ -78,15 +78,15 @@ class PaginationUtilTest {
     List<String> strHeaders = headers.get(HttpHeaders.LINK);
     assertThat(strHeaders).isNotNull();
     assertThat(strHeaders).hasSize(1);
-    String headerData = strHeaders.getFirst();
+    String headerData = strHeaders.get(0);
     assertThat(headerData.split(",")).hasSize(3);
     String expectedData =
         "</api/_search/example?query=Test1%2C%20test2&page=1&size=50>; rel=\"next\"," +
         "</api/_search/example?query=Test1%2C%20test2&page=7&size=50>; rel=\"last\"," +
         "</api/_search/example?query=Test1%2C%20test2&page=0&size=50>; rel=\"first\"";
     assertThat(headerData).isEqualTo(expectedData);
-    List<String> xparamTotalCountHeaders = headers.get("X-Total-Count");
-    assertThat(xparamTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(400L);
+    List<String> xTotalCountHeaders = headers.get("X-Total-Count");
+    assertThat(xTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(400L);
 
     // Page 1
     uriBuilder.queryParam("page", "1");
@@ -95,15 +95,16 @@ class PaginationUtilTest {
     strHeaders = headers.get(HttpHeaders.LINK);
     assertThat(strHeaders).isNotNull();
     assertThat(strHeaders).hasSize(1);
-    headerData = strHeaders.getFirst();
+    headerData = strHeaders.get(0);
     assertThat(headerData.split(",")).hasSize(4);
-    expectedData = "</api/_search/example?query=Test1%2C%20test2&page=2&size=50>; rel=\"next\"," +
-                   "</api/_search/example?query=Test1%2C%20test2&page=0&size=50>; rel=\"prev\"," +
-                   "</api/_search/example?query=Test1%2C%20test2&page=7&size=50>; rel=\"last\"," +
-                   "</api/_search/example?query=Test1%2C%20test2&page=0&size=50>; rel=\"first\"";
+    expectedData =
+        "</api/_search/example?query=Test1%2C%20test2&page=2&size=50>; rel=\"next\"," +
+        "</api/_search/example?query=Test1%2C%20test2&page=0&size=50>; rel=\"prev\"," +
+        "</api/_search/example?query=Test1%2C%20test2&page=7&size=50>; rel=\"last\"," +
+        "</api/_search/example?query=Test1%2C%20test2&page=0&size=50>; rel=\"first\"";
     assertThat(headerData).isEqualTo(expectedData);
-    xparamTotalCountHeaders = headers.get("X-Total-Count");
-    assertThat(xparamTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(400L);
+    xTotalCountHeaders = headers.get("X-Total-Count");
+    assertThat(xTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(400L);
 
     // Page 6
     uriBuilder.queryParam("page", "6");
@@ -112,15 +113,16 @@ class PaginationUtilTest {
     strHeaders = headers.get(HttpHeaders.LINK);
     assertThat(strHeaders).isNotNull();
     assertThat(strHeaders).hasSize(1);
-    headerData = strHeaders.getFirst();
+    headerData = strHeaders.get(0);
     assertThat(headerData.split(",")).hasSize(4);
-    expectedData = "</api/_search/example?query=Test1%2C%20test2&page=7&size=50>; rel=\"next\"," +
-                   "</api/_search/example?query=Test1%2C%20test2&page=5&size=50>; rel=\"prev\"," +
-                   "</api/_search/example?query=Test1%2C%20test2&page=7&size=50>; rel=\"last\"," +
-                   "</api/_search/example?query=Test1%2C%20test2&page=0&size=50>; rel=\"first\"";
+    expectedData =
+        "</api/_search/example?query=Test1%2C%20test2&page=7&size=50>; rel=\"next\"," +
+        "</api/_search/example?query=Test1%2C%20test2&page=5&size=50>; rel=\"prev\"," +
+        "</api/_search/example?query=Test1%2C%20test2&page=7&size=50>; rel=\"last\"," +
+        "</api/_search/example?query=Test1%2C%20test2&page=0&size=50>; rel=\"first\"";
     assertThat(headerData).isEqualTo(expectedData);
-    xparamTotalCountHeaders = headers.get("X-Total-Count");
-    assertThat(xparamTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(400L);
+    xTotalCountHeaders = headers.get("X-Total-Count");
+    assertThat(xTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(400L);
 
     // Page 7
     uriBuilder.queryParam("page", "7");
@@ -129,11 +131,12 @@ class PaginationUtilTest {
     strHeaders = headers.get(HttpHeaders.LINK);
     assertThat(strHeaders).isNotNull();
     assertThat(strHeaders).hasSize(1);
-    headerData = strHeaders.getFirst();
+    headerData = strHeaders.get(0);
     assertThat(headerData.split(",")).hasSize(3);
-    expectedData = "</api/_search/example?query=Test1%2C%20test2&page=6&size=50>; rel=\"prev\"," +
-                   "</api/_search/example?query=Test1%2C%20test2&page=7&size=50>; rel=\"last\"," +
-                   "</api/_search/example?query=Test1%2C%20test2&page=0&size=50>; rel=\"first\"";
+    expectedData =
+        "</api/_search/example?query=Test1%2C%20test2&page=6&size=50>; rel=\"prev\"," +
+        "</api/_search/example?query=Test1%2C%20test2&page=7&size=50>; rel=\"last\"," +
+        "</api/_search/example?query=Test1%2C%20test2&page=0&size=50>; rel=\"first\"";
     assertThat(headerData).isEqualTo(expectedData);
   }
 
@@ -145,7 +148,7 @@ class PaginationUtilTest {
     List<String> strHeaders = headers.get(HttpHeaders.LINK);
     assertThat(strHeaders).isNotNull();
     assertThat(strHeaders).hasSize(1);
-    String headerData = strHeaders.getFirst();
+    String headerData = strHeaders.get(0);
     assertThat(headerData.split(",")).hasSize(2);
     String[] linksData = headerData.split(",");
     assertThat(linksData).hasSize(2);
@@ -155,7 +158,7 @@ class PaginationUtilTest {
         "</api/_search/example?query=Test%3E%3Btest&page=0&size=0>; rel=\"last\"," +
         "</api/_search/example?query=Test%3E%3Btest&page=0&size=0>; rel=\"first\"";
     assertThat(headerData).isEqualTo(expectedData);
-    List<String> xparamTotalCountHeaders = headers.get("X-Total-Count");
-    assertThat(xparamTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(0L);
+    List<String> xTotalCountHeaders = headers.get("X-Total-Count");
+    assertThat(xTotalCountHeaders).hasSize(1).extracting(Long::parseLong).containsExactly(0L);
   }
 }
